Added db config

--- a/src/config.yaml
+++ b/src/config.yaml
@@ -1,16 +1,18 @@
 database:
   connections:
-    - wgi:
-        dialect: 'mysql'
-        host: 'localhost'
-        port: 3306
-        schema: 'WorldGovernanceIndicators'
-        username: 'admin'
-        password: '123'
-    - doing-bussiness:
-        dialect: 'mysql'
-        host: 'localhost'
-        port: 3306
-        schema: 'DoingBusiness'
-        username: 'admin'
-        password: '123'
+    wgi:
+      dialect: "mysql"
+      driver: "mysqlconnector"
+      host: "localhost"
+      port: 3306
+      schema: "WorldGovernanceIndicators"
+      username: "admin"
+      password: "123"
+    doing-bussiness:
+      dialect: "mysql"
+      driver: "mysqlconnector"
+      host: "localhost"
+      port: 3306
+      schema: "DoingBusiness"
+      username: "admin"
+      password: "123"
