--- a/src/config.yaml
+++ b/src/config.yaml
@@ -1,6 +1,6 @@
 database:
   connections:
-    wgi:
+    world-governance-index:
       dialect: "mysql"
       driver: "mysqlconnector"
       host: "localhost"
@@ -14,5 +14,21 @@ database:
       host: "localhost"
       port: 3306
       schema: "DoingBusiness"
+      username: "admin"
+      password: "123"
+    transformation-index:
+      dialect: "mysql"
+      driver: "mysqlconnector"
+      host: "localhost"
+      port: 3306
+      schema: "TransformationIndex"
+      username: "admin"
+      password: "123"
+    economic-freedom:
+      dialect: "mysql"
+      driver: "mysqlconnector"
+      host: "localhost"
+      port: 3306
+      schema: "EconomicFreedom"
       username: "admin"
       password: "123"
