Renamed column names

--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -8,5 +8,6 @@
         "**/Thumbs.db": true,
         "**/.ruby-lsp": true,
         "**/__pycache__": true
-    }
+    },
+    "python.languageServer": "Pylance"
 }
