--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Ignoring DUMP files (just run the notebooks)
+
+src/repository/DUMP/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
