--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
-    "python.analysis.typeCheckingMode": "basic",
     "python.analysis.extraPaths": [
-        "./src/repository"
+        "./src/repository",
+        "./src/dags"
     ]
 }
